# cyd-80

./: CMakeLists.txt  README.md  sdkconfig.defaults
disks/: README
main/: CMakeLists.txt  cydsim.c  cydsim.h  disks.c  disks.h  gpio.h  sim.h  simcfg.c  simio.c  simmem.c  simmem.h  simport.h
roms/: Makefile
src-examples/: README
